--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 github: mpi3d
-custom: "bitcoin:1HuumP3Rc7PGy4NhW5RuFw1H1L3uSFtBUJ"
+custom: "https://btc.com/btc/address/1HuumP3Rc7PGy4NhW5RuFw1H1L3uSFtBUJ"
