--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "firmware"]
 	path = firmware
-	url = https://gitlab.freedesktop.org/mpi3d/goodix-firmware.git
+	url = https://github.com/goodix-fp-linux-dev/goodix-firmware.git
